--- a/views/bio.ejs
+++ b/views/bio.ejs
@@ -1,3 +1,4 @@
 <% layout('boilerplate') %>
 
-<h1>Bio</h1>
+<h2>Bio</h2>
+<p id="bio-des">Hello! I'm Zachary Harris, a passionate software developer based in Oklahoma. I hold an Associate Degree in Computer Information Systems and have valuable skills in JavaScript (Node, Express, Angular), RESTful services, MongoDB, SQL, .NET, Git, C++, C#, shell scripting, Python, HTML, and CSS. With three years of freelance software development and two internships, I am well-versed in creating innovative solutions and collaborating with engineering teams.</p>
